2024-06-01  Jim Fowler  <jrf@Pergamon>

	* Tools/python/pyproject.toml: Add dependency on
	fast-autocomplete[levenshtein] for journal program.

	* Tools/python/aabooks/ajbbook/bookfile.py: remove read_file_txt()
	and write_file_txt().  This were no longer valid after the changes
	of 27 May 2024 to remove the entrytext.py.

	* v2.3.0: add tag v2.3.0

	* Tools/python/aabooks/journal: Added sort menu using QAction and
	QActionGroup.  Can now link the menu signal to the
	bookfile.sort_by slot. Can now sort and unsort.

	* Tools/python/aabooks/ajbbook: Added sort menu using QAction and
	QActionGroup.  Can now link the menu signal to the
	bookfile.sort_by slot. Can now sort and unsort.

2024-05-30  Jim Fowler  <jrf@Pergamon>

	* sortbooks: created branch sortbooks.  Deleted previous
	sort_bookfile branch.  There were too many conflicts with
	master.

2024-05-27  Jim Fowler  <jrf@Pergamon>

	* Tools/python/pyproject.toml (Repository): Created a
	pyproject.toml file because the old installation with 'python
	setup.py install' is deprecated.  The new method is 'pip install'.
	Still using the setup.py file to describe the tools.  Should
	consider a different back end rather than setup.py.  However, that
	is for the future.

	Modifed pyproject.toml, README.md, and Makefile.am.

2024-05-26  Jim Fowler  <jrf@Pergamon>

	* aabooks/journal: move all unit tests to explicit test programs
	in ./tests.

	* aabooks/ajbbook: move all unit tests to explicit test programs
	in ./tests.  Note that ajbcomments.py and entrytext.py were not
	moved as these are broken and the system no longer uses text
	based CSV files anymore.  These files will be delete soon.

2024-05-25  Jim Fowler  <jrf@Pergamon>

	* aabooks/lib: move all unittests to explict test programs in
	./tests.  This was done for entrylists.py, isbn.py,
	pagination_xml.py, roman.py, search.py, and utils.py. This is in
	preparation for a migration to a better build and installation
	method.

2023-02-05  Jim Fowler  <jrf@Pergamon>
